// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconItem /> shapshots should render active if prop set to true 1`] = `
<button
  className="iconItem  activeItem"
  onClick={[Function]}
/>
`;

exports[`<IconItem /> shapshots should render empty 1`] = `
<button
  className="iconItem "
  onClick={[Function]}
/>
`;

exports[`<IconItem /> shapshots should render with the given children 1`] = `
<button
  className="iconItem "
  onClick={[Function]}
>
  <div>
    child1
  </div>
  <div>
    child2
  </div>
</button>
`;
